# bevymaze

./: .gitmodules  Cargo.toml  flake.nix  readme.org
assets/: particle_render.wgsl  particle_update.wgsl
assets/shaders/: bvh.wgsl  curvature_mesh_vertex_output.wgsl  curvature_transform.wgsl  grass_color.wgsl  grass_curvature_transform.wgsl  maze_color.wgsl  maze_curvature_transform.wgsl  terrain_color.wgsl  terrain_heights.wgsl  terrain_interpolation.wgsl  util.wgsl
imported_assets/Default/shaders/: curvature_transform.wgsl  terrain_interpolation.wgsl
server/: Cargo.toml
server/examples/: hello-redis.rs
server/src/: connection.rs  lib.rs  main.rs  maze_gen.rs  square_maze_gen.rs  terrain_data.rs  terrain_gen.rs  util.rs
src/: adj_list.rs  bvh.rs  fabian.rs  loader.rs  main.rs  maze_gen.rs  maze_loader.rs  maze_render.rs  nearest_neighbor.rs  player_controller.rs  pregracke.rs  render.rs  rendering.rs  shaders.rs  terrain_data_map.rs  terrain_loader.rs  terrain_render.rs  test_render.rs  tests.rs  tree_render.rs  ui.rs  voronoi_3d.rs
