[workspace]

members = [
    "server"
]



[package]
name = "bevymaze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.11.0", features = ["wayland"] }
bevy = { version = "0.11.0"}
image = "0.24.6"
imageproc = "0.23.0"
petgraph = "0.6.3"
rand = "0.8.5"
rusttype = "0.9.3"
#bevy_terrain = { path = "bevy_terrain" }
server = { path = "server" }
noise = "0.8.2"
qoi = "0.4.1"
lazy_static = "1.4.0"
itertools = "0.11.0"
bevy_shader_utils = "0.5.2"
delaunator = "1.0.2"
roots = "0.0.8"
bevy_rapier3d = "0.22.0"
bevy_mod_wanderlust = "0.4.0"
bevy_framepace = "0.13.3"
aether_spyglass = "0.2.0"
log = "0.4.20"
futures-util = "0.3.29"
tokio-tungstenite = "0.20.1"
url = "2.4.1"
env_logger = "0.10.0"
tokio = "1.33.0"
bevy_easings = "0.11.1"
hilbert = "0.1.2"
fixed = "1.24.0"
async-stream = "0.3.5"
