[workspace]

members = [
    "server"
]

[package]
name = "bevymaze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1" }
image = "0.24.6"
imageproc = "0.23.0"
petgraph = "0.6.3"
rand = "0.8.5"
rusttype = "0.9.3"
server = { path = "server" }
noise = "0.8.2"
qoi = "0.4.1"
lazy_static = "1.4.0"
itertools = "0.11.0"
bevy_shader_utils = "0.5.2"
delaunator = "1.0.2"
roots = "0.0.8"
bevy_rapier3d = "0.23.0"
# bevy_mod_wanderlust = "0.4.0"
bevy_mod_wanderlust = { path = "../bevy_mod_wanderlust" }
bevy_framepace = "0.14.1"
# aether_spyglass = "0.2.0"
aether_spyglass = { path = "../aether_spyglass" }
log = "0.4.20"
futures-util = "0.3.29"
url = "2.4.1"
env_logger = "0.10.0"
bevy_easings = "0.12.2"
fixed = "1.24.0"
async-stream = "0.3.5"
bevy_atmosphere = "0.8.1"
caches = "0.2.7"
libnoise = "1.0.0"
bevy_mod_debugdump = "0.9.0"
bitvec = "1.0.1"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.89"
web-sys = "0.3.66"
tokio-tungstenite-wasm = "0.2.1"
kiddo = "4.0.0"
lightyear = "0.6.1"
serde = "1.0.195"
derive_more = "0.99.17"
futures-lite = "2.2.0"
crossbeam-channel = "0.5.11"
tokio-tungstenite = "0.21.0"
tokio = "1.35.1"
postcard = { version = "1.0.8", features = ["use-std"] }
