[workspace]

members = [
    "server"
]

[package]
name = "bevymaze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["trace"] }
image = "0.25.1"
imageproc = "0.24.0"
petgraph = "0.6.3"
rand = "0.8.5"
rusttype = "0.9.3"
server = { path = "server" }
noise = "0.9.0"
qoi = "0.4.1"
lazy_static = "1.4.0"
itertools = "0.12.1"
#bevy_shader_utils = "0.5.2"
delaunator = { git = "https://github.com/mourner/delaunator-rs" }
roots = "0.0.8"
bevy_rapier3d = "0.25.0"
bevy_mod_wanderlust = { git = "https://github.com/66OJ66/bevy_mod_wanderlust.git" }
bevy_framepace = "0.15.0"
log = "0.4.20"
futures-util = "0.3.29"
url = "2.4.1"
env_logger = "0.11.3"
bevy_easings = "0.13.1"
fixed = "1.24.0"
async-stream = "0.3.5"
bevy_atmosphere = "0.9.1"
caches = "0.2.7"
libnoise = "1.0.0"
bevy_mod_debugdump = "0.10.0"
bitvec = { version = "1.0.1", features = ["serde"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.89"
web-sys = "0.3.66"
tokio-tungstenite-wasm = "0.2.1"
serde = "1.0.195"
derive_more = "0.99.17"
futures-lite = "2.2.0"
crossbeam-channel = "0.5.11"
tokio-tungstenite = "0.21.0"
tokio = "1.35.1"
postcard = { version = "1.0.8", features = ["use-std"] }
bevy-tokio-tasks = { git = "https://github.com/Cyannide/bevy-tokio-tasks.git" }
hilbert = "0.1.2"
ordered-float = "4.2.0"
iyes_perf_ui = "0.2.3"
bevy_flycam = "0.13.0"
kdtree = "0.7.0"
ab_glyph = "0.2.26"
svg = "0.17.0"
