[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["lib"]
bench = false

[dependencies]
bytes = "1"
bevy = "0.12.0"
bytemuck = "1.13.1"
fixed = "1.23.1"
image = "0.24.6"
itertools = "0.11.0"
noise = "0.8.2"
qoi = "0.4.1"
log = "0.4.20"
futures-util = "0.3.28"
env_logger = "0.10.0"
regex = "1.10.2"
flate2 = "1.0.28"
byteorder = "1.5.0"
bevy_easings = "0.12.2"
libnoise = "1.0.0"
