[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["lib"]
bench = false

[dependencies]
bytes = "1"
bytemuck = "1.13.1"
fixed = "1.23.1"
image = "0.25.1"
itertools = "0.12.1"
noise = "0.9.0"
qoi = "0.4.1"
log = "0.4.20"
futures-util = "0.3.28"
env_logger = "0.11.3"
regex = "1.10.2"
flate2 = "1.0.28"
byteorder = "1.5.0"
bevy_easings = "0.13.1"
libnoise = "1.0.0"
clap = { version = "4.4.16", features = ["derive"] }
derive_more = "0.99.17"
serde = "1.0.195"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
bevy-inspector-egui = "0.24.0"
tracing-subscriber = "0.3.18"
bevy = "0.13.2"
tokio-tungstenite = "0.21.0"
postcard = { version = "1.0.8", features = ["use-std"] }
bitvec = { version = "1.0.1", features = ["serde"] }
petgraph = { version = "0.6.4", features = ["serde-1", "serde", "serde_derive"] }
rand = "0.8.5"
